Changelog
=========

1.3.2 (unreleased)
------------------

- Nothing changed yet.


1.3.1 (2013-03-05)
------------------

- Nothing changed yet.


1.3 (2013-01-01)
----------------

- Reinstate positioning for magnifying glass image on search results
  Search button.
  [danjacka]

- Fix sitemap display by making styles more specific than #content ul.
  [danjacka]

1.2.4 (2012-10-15)
------------------

- Add selector for AT required field icon, as done in Sunburst 1.2.4.
  [danjacka]

- Remove comments referencing an old plone_tableless skin layer.
  [danjacka]


1.2.3 (2012-08-14)
------------------

- Use the new user.png instead of user.gif. 
  Closes http://dev.plone.org/ticket/13034
  [esteele]


1.2.2 (2012-05-30)
------------------
- added styling on the eventlisting, that was changed from a table into headings/paragraphs 
  for accessibility reasons. Styling uses the classic dtml style to minimize visual changes.
  [polyester]

- Set "display: block" on .formHelp in forms.css.dtml to assure that field
  help displays as a block even if it is formatted as a span for accessibility.
  [smcmahon]


1.2.1 (2012-02-07)
------------------

- Fix the styling of the new content history views.
  [rossp]


1.2 - 2011-07-19
----------------

- Pull in plone.app.i18n configuration so that the languageselector template is         
  preserved. Refs http://dev.plone.org/plone/ticket/12007
  [esteele]

- Deprecated iefixes.js after we have introduced Modernizr and removed the
  script's GS registration.
  References http://dev.plone.org/plone/ticket/11300
  [spliter]

- Merge changes from PLIP 9352.
  [esteele, spliter]


1.1.1 - Unreleased
------------------

- Add MANIFEST.in.
  [WouterVH]


1.1 - 2011-02-04
----------------

- Add styling changes from PLIP 11017: Tags MultiSelectionWidget w/scrollbar &
  checkboxes.
  [esteele]


1.0.1 - 2010-07-18
------------------

- Reset the font-size for the body of documents being edited in TinyMCE.