@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <object name="portal_skins" default_skin="Plone Classic Theme">
 
+ <object name="classic_templates"
+    meta_type="Filesystem Directory View"
+    directory="plonetheme.classic:skins/classic_templates"/>
  <object name="classic_styles"
     meta_type="Filesystem Directory View"
     directory="plonetheme.classic:skins/classic_styles"/>
@@ -9,6 +12,7 @@
     directory="plonetheme.classic:skins/classic_ecmascript"/>
 
  <skin-path name="Plone Classic Theme" based-on="Plone Default">
+  <layer name="classic_templates" insert-after="custom" />
   <layer name="classic_styles" insert-after="custom" />
   <layer name="classic_ecmascript" insert-after="classic_styles" />
  </skin-path>
