@@ -2,6 +2,7 @@
 <object name="portal_skins" default_skin="Sunburst Theme">
 
  <object name="classic_styles" remove="True" />
+ <object name="classic_templates" remove="True" />
  <skin-path name="Plone Classic Theme" remove="True" />
 
 </object>
