@@ -1,0 +1,204 @@
+<metal:page define-macro="master">
+<metal:block define-slot="top_slot" />
+
+<tal:doctype tal:replace="structure string:&lt;!DOCTYPE html&gt;" />
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      xml:lang="en"
+      lang="en"
+      tal:define="portal_state context/@@plone_portal_state;
+                  context_state context/@@plone_context_state;
+                  plone_view context/@@plone;
+                  lang portal_state/language;
+                  view nocall:view | nocall: plone_view;
+                  dummy python: plone_view.mark_view(view);
+                  portal_url portal_state/portal_url;
+                  checkPermission nocall: context/portal_membership/checkPermission;
+                  site_properties context/portal_properties/site_properties;
+                  ajax_load request/ajax_load | nothing;
+                  ajax_include_head request/ajax_include_head | nothing;
+                  dummy python:request.RESPONSE.setHeader('X-UA-Compatible', 'IE=edge,chrome=1');"
+      tal:attributes="lang lang;
+                      xml:lang lang">
+
+  <metal:cache use-macro="context/global_cache_settings/macros/cacheheaders">
+    Get the global cache headers located in global_cache_settings.
+  </metal:cache>
+
+  <head>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <meta name="generator" content="Plone - http://plone.org" />
+
+    <metal:baseslot define-slot="base">
+      <base tal:attributes="href plone_view/renderBase" /><!--[if lt IE 7]></base><![endif]-->
+    </metal:baseslot>
+
+    <tal:notajax tal:condition="python:not ajax_load or ajax_include_head">
+        <div tal:replace="structure provider:plone.htmlhead" />
+
+        <link tal:replace="structure provider:plone.htmlhead.links" />
+
+        <tal:comment replace="nothing"> A slot where you can insert elements in the header from a template </tal:comment>
+        <metal:headslot define-slot="head_slot" />
+
+        <tal:comment replace="nothing"> A slot where you can insert CSS in the header from a template </tal:comment>
+        <metal:styleslot define-slot="style_slot" />
+
+        <tal:comment replace="nothing"> This is deprecated, please use style_slot instead. </tal:comment>
+        <metal:cssslot define-slot="css_slot" />
+
+        <tal:comment replace="nothing"> A slot where you can insert javascript in the header from a template </tal:comment>
+        <metal:javascriptslot define-slot="javascript_head_slot" />
+    </tal:notajax>
+
+  </head>
+
+  <body tal:define="isRTL portal_state/is_rtl;
+                    sl python:plone_view.have_portlets('plone.leftcolumn', view);
+                    sr python:plone_view.have_portlets('plone.rightcolumn', view);
+                    body_class python:plone_view.bodyClass(template, view);"
+        tal:attributes="class body_class;
+                        dir python: isRTL and 'rtl' or 'ltr'">
+    <div id="visual-portal-wrapper">
+
+      <div id="portal-top" i18n:domain="plone">
+        <div tal:replace="structure provider:plone.portaltop" tal:condition="not:ajax_load" />
+      </div>
+
+      <div class="visualClear" id="clear-space-before-wrapper-table"><!-- --></div>
+
+      <table id="portal-columns">
+        <tbody>
+          <tr>
+            <tal:notajax tal:condition="not:ajax_load">
+                <tal:comment replace="nothing"> Start of the left column </tal:comment>
+                <td id="portal-column-one"
+                    metal:define-slot="column_one_slot"
+                    tal:condition="sl">
+                  <div class="visualPadding">
+                    <metal:portlets define-slot="portlets_one_slot">
+                      <tal:block replace="structure provider:plone.leftcolumn" />
+                    </metal:portlets>
+                    &nbsp;
+                  </div>
+                </td>
+                <tal:comment replace="nothing"> End of the left column </tal:comment>
+            </tal:notajax>
+
+            <tal:comment replace="nothing"> Start of main content block </tal:comment>
+            <td id="portal-column-content">
+
+              <div id="viewlet-above-content" tal:content="structure provider:plone.abovecontent" />
+
+              <metal:block define-slot="content">
+                <div metal:define-macro="content"
+                     tal:define="show_border context/@@plone/showEditableBorder"
+                     tal:attributes="class python:show_border and 'documentEditable' or ''">
+
+                    <div id="edit-bar"
+                        tal:condition="show_border"
+                        tal:content="structure provider:plone.contentviews" />
+
+                    <span id="contentTopLeft"></span>
+                    <span id="contentTopRight"></span>
+
+                    <div metal:use-macro="context/global_statusmessage/macros/portal_message">
+                      Portal status message
+                    </div>
+
+                    <metal:slot define-slot="body">
+                    <div id="content">
+                      <metal:header define-slot="header" tal:content="nothing">
+                        Visual Header
+                      </metal:header>
+                      <metal:bodytext define-slot="main">
+
+                        <metal:main define-macro="main">
+                            <div tal:replace="structure provider:plone.abovecontenttitle" />
+                            <metal:title define-slot="content-title">
+                                <metal:comment tal:content="nothing">
+                                    If you write a custom title always use
+                                    <h1 class="documentFirstHeading"></h1> for it.
+                                </metal:comment>
+                                <h1 metal:use-macro="context/kss_generic_macros/macros/generic_title_view">
+                                    Generic KSS Title. Is rendered with class="documentFirstHeading".
+                                </h1>
+                            </metal:title>
+                            <div tal:replace="structure provider:plone.belowcontenttitle" />
+
+                            <metal:description define-slot="content-description">
+                                <metal:comment tal:content="nothing">
+                                    If you write a custom description always use
+                                    <div class="documentDescription"></div> for it.
+                                </metal:comment>
+                                <div metal:use-macro="context/kss_generic_macros/macros/generic_description_view">
+                                    Generic KSS Description. Is rendered with class="documentDescription".
+                                </div>
+                            </metal:description>
+
+                            <div tal:replace="structure provider:plone.abovecontentbody" />
+                            <div id="content-core">
+                                <metal:text define-slot="content-core" tal:content="nothing">
+                                    Page body text
+                                </metal:text>
+                            </div>
+                            <div tal:replace="structure provider:plone.belowcontentbody" />
+                        </metal:main>
+
+                      </metal:bodytext>
+                    </div>
+                    </metal:slot>
+
+                    <metal:sub define-slot="sub" tal:content="nothing">
+                        This slot is here for backwards-compatibility only.
+                        Don't copy it in custom templates.
+                    </metal:sub>
+
+                    <span id="contentBottomLeft"></span>
+                    <span id="contentBottomRight"></span>
+
+                </div>
+              </metal:block>
+
+              <div id="viewlet-below-content" tal:content="structure provider:plone.belowcontent" />
+
+            </td>
+            <tal:comment replace="nothing"> End of main content block </tal:comment>
+
+            <tal:notajax tal:condition="not:ajax_load">
+                <tal:comment replace="nothing"> Start of right column </tal:comment>
+                <td id="portal-column-two"
+                    metal:define-slot="column_two_slot"
+                    tal:condition="sr">
+                  <div class="visualPadding">
+                    <metal:portlets define-slot="portlets_two_slot">
+                      <tal:block replace="structure provider:plone.rightcolumn" />
+                    </metal:portlets>
+                    &nbsp;
+                  </div>
+                </td>
+                <tal:comment replace="nothing"> End of the right column </tal:comment>
+            </tal:notajax>
+          </tr>
+        </tbody>
+      </table>
+      <tal:comment replace="nothing"> end column wrapper </tal:comment>
+
+      <div class="visualClear" id="clear-space-before-footer"><!-- --></div>
+
+      <metal:block i18n:domain="plone" tal:condition="not:ajax_load">
+
+        <div tal:replace="structure provider:plone.portalfooter" />
+
+      </metal:block>
+
+      <div class="visualClear"><!-- --></div>
+    </div>
+</body>
+</html>
+</metal:page>
