@@ -4,7 +4,8 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added classic_templates with main_template.pt containing the pre plone 4.4
+  table layout. [TH-code]
 
 
 1.3.1 (2013-03-05)
